Update the welcome page ui/ux

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@animaapp/vite-plugin-screen-graph": "0.1.11",
+    "@heroicons/react": "^2.2.0",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-slot": "^1.1.0",
     "@types/node": "24.0.1",
