--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@animaapp/vite-plugin-screen-graph": "0.1.11",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@heroicons/react": "^2.2.0",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-slot": "^1.1.0",
     "@types/node": "24.0.1",
-    "@vitejs/plugin-react": "4.5.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "2.1.1",
     "jiti": "2.4.2",
@@ -40,7 +43,7 @@
     "@animaapp/vite-plugin-screen-graph": "^0.1.5",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.0",
-    "@vitejs/plugin-react": "4.3.4",
+    "@vitejs/plugin-react": "^4.3.4",
     "esbuild": "0.24.0",
     "globals": "15.12.0",
     "tailwindcss": "3.4.16",
