--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "24.0.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "2.1.1",
+    "framer-motion": "^12.19.1",
     "jiti": "2.4.2",
     "less": "4.3.0",
     "lightningcss": "1.30.1",
