--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.1.0",
     "@types/node": "24.0.1",
+    "@types/react-helmet-async": "^1.0.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "2.1.1",
     "framer-motion": "^12.19.1",
@@ -30,6 +31,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.30.1",
     "sass": "1.89.2",
